--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="/Landing Page/style/style.css">
-    <link rel="stylesheet" href="/Landing Page/style/font.css">
-    <link rel="stylesheet" href="/Landing Page/style/media.css">
+    <link rel="stylesheet" href="style/font.css">
+    <link rel="stylesheet" href="style/media.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
@@ -38,7 +38,7 @@
         </aside>
 
         <article>
-            <img src="/Landing Page/img/Design_sem_nome-removebg-preview.png" alt="batata-do-stardew">
+            <img src="img/Design_sem_nome-removebg-preview.png" alt="batata-do-stardew">
         </article>
     </main>
 </body>
