--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+     <link
+			rel="shortcut icon"
+			href="img/Design_sem_nome-removebg-preview.png"
+			type="image/x-icon"
+		/>
     <link rel="stylesheet" href="style/font.css">
     <link rel="stylesheet" href="style/media.css">
     <link rel="stylesheet" href="style/style.css">
