--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div id="title">
-            <h1>Potato Valley</h1>
+            <h1>Potato Valley</h1><br>
             <h1>News</h1>
         </div>
         <ul>
