--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <aside>
             <h2><span>Assine Agora</span></h2>
-            <h2>A Potato<br> Valley News</h2>
+            <h2>A Potato Valley News</h2>
             <p>
                 Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.
             </p>
